src/objects/Bond_Payment__c.object
<CustomObject>
    <description>LPAM - Bond Payments</description>
    <fields>
        <fullName>Actual_Financial__c</fullName>
        <inlineHelpText>Select the Actual Financial Year to apply this payment to.</inlineHelpText>
        <label>Actual Financial</label>
        <referenceTo>Actual_Financial__c</referenceTo>
        <relationshipLabel>Bond Payments</relationshipLabel>
        <relationshipName>Bond_Payments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bond__c</fullName>
        <label>Bond</label>
        <referenceTo>Bond__c</referenceTo>
        <relationshipLabel>Bond Payments</relationshipLabel>
        <relationshipName>Bond_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <label>Bond Payment</label>
    <nameField>
        <displayFormat>BondPMT-{00000}</displayFormat>
        <label>Bond Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bond Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>